--- a/style.css
+++ b/style.css
@@ -62,8 +62,15 @@ body{
     text-align: center;
 }
 
+.ww{
+    width: 200px;
+    background-color: white;
+}
 
-
+.btn{
+    border: solid rgb(59, 59, 59) 1px;
+    width: 150px;
+}
 
 .t-a-c{
     text-align: center;
